Add details to the user show

--- a/app/assets/stylesheets/components/_loginpage.scss
+++ b/app/assets/stylesheets/components/_loginpage.scss
@@ -1,6 +1,6 @@
 /* Styles spécifiques à la page de connexion */
 .login-page {
-  background-image: url('/assets/images/background_images/bg_image_1.jpeg'); /* Remplace par ton image */
+  background-image: url("/app/assets/images/background_images/bg_image_1.jpeg"); /* Remplace par ton image */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
