front show page updated

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "components/card";
 @import "pages/index";
 @import "components/loginpage";
+@import "components/aupair_show";
 
 // Mapbox css
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.css");
