--- a/app/views/users/_filters.html.erb
+++ b/app/views/users/_filters.html.erb
@@ -2,7 +2,7 @@
   <!-- Bouton pour ouvrir/fermer les filtres -->
   <div class="text-center my-4">
     <button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#filters-container" aria-expanded="false" aria-controls="filters-container">
-      Toggle Filters
+      Toggle filters
     </button>
   </div>
 
