--- a/app/views/users/_users_list.html.erb
+++ b/app/views/users/_users_list.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <% @users.each do |user| %> <!-- Boucle à travers les utilisateurs -->
       <div class="col-md-3 mb-3"> <!-- Colonne Bootstrap pour l'affichage -->
-        <div class="card">
+        <div class="card card-index">
           <!-- Ajout d'un conteneur parent pour gérer l'image et l'icône étoile -->
           <div class="card-img-top-container">
             <!-- Affichage de la photo si elle est attachée -->
