--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -68,9 +68,14 @@
 .position-icon {
   // position: absolute; /* Position absolue par rapport au conteneur parent */
   // top: 8px; /* Distance depuis le haut du conteneur */
-  right: 32px; /* Positionnement à droite */
+  // right: 32px; /* Positionnement à droite */
   color: #FDB434; /* Couleur de l'étoile */
   font-size: 20px; /* Taille de l'étoile */
+
+  &:hover{
+    cursor: pointer;
+    color: #e6a331;
+  }
 }
 
 /* Icône match */
