--- a/app/views/users/_users_list.html.erb
+++ b/app/views/users/_users_list.html.erb
@@ -29,10 +29,23 @@
                     data-manage-favorites-target="star"
                     class="fa-star position-icon <%= Favorite.where(favoriting_user_id: current_user.id, favorited_user_id: user.id).empty? ? 'fa-regular' : 'fa-solid' %>"></i>
                 </div>
-                <div>
-                  <i class="fa-solid fa-heart-circle-check position-icon-match"></i>
+                <div data-controller="manage-matches" data-manage-matches-id-value="<%= {initiated_by: current_user.id, received_by: user.id}.to_json %>" >
+                  <i data-action="click->manage-matches#manage_matches"
+                    data-manage-matches-target="heart"
+                    class="fa-solid position-icon-match
+                    <% if Match.where(initiated_by: current_user.id, received_by: user.id).empty? %>
+                      <%= 'fa-heart-circle-plus icon-match-empty' %>
+                    <% elsif Match.where(initiated_by: current_user.id, received_by: user.id).first.status == "pending" %>
+                      <%= 'fa-heart-circle-exclamation icon-match-pending' %>
+                    <% elsif Match.where(initiated_by: current_user.id, received_by: user.id).first.status == "refused" %>
+                      <%= 'fa-heart-circle-xmark icon-match-refused' %>
+                    <% elsif Match.where(initiated_by: current_user.id, received_by: user.id).first.status == "accepted" %>
+                      <%= 'fa-heart-circle-check icon-match-accepted' %>
+                    <% end %>"></i>
                 </div>
               </div>
+
+
 
             </div>
 
@@ -60,6 +73,12 @@
 
             <!-- Bouton pour voir le profil détaillé -->
             <%= link_to "View profile", user_path(user), class: "btn btn-primary" %>
+
+            <%= link_to "Add as match",
+                  matches_path(received_by: user, initiated_by: current_user ),
+                  data: {turbo_method: :post},
+                  class: "btn btn-secondary" %>
+
 
             <%# Button favorite to add it in rails (whithout js)
             <%= link_to "Add as favorite",
