Basic homepage + sign in and sign up updates

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 /* Conteneur principal pour aligner les colonnes */
-.container.hero {
-  min-height: calc(100vh - 120px);
+.container-hero {
+  min-height: calc(100vh - 80px);
   display: flex;
   justify-content: center;
   align-items: center;
