--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= render 'users/navbar' %>
+<%= render 'navbar' %>
 <div class="login-page d-flex justify-content-center align-items-center">
   <div class="login-box">
       <h2>Sign up</h2>
@@ -24,8 +24,6 @@
           <%= f.button :submit, "Sign up",class: "btn btn-primary"%>
         </div>
       <% end %>
-
-      <%= render "devise/shared/links" %>
     </div>
   </div>
 </div>
