--- a/app/views/users/_navbar.html.erb
+++ b/app/views/users/_navbar.html.erb
@@ -32,7 +32,7 @@
                 'aria-haspopup': true,
                 'aria-expanded': false) %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "My account", "#", class: "dropdown-item" %>
+              <%= link_to "My account", edit_user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: { turbo_method: :delete } %>
             </div>
           </li>
