--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,21 +1,21 @@
 <%= render 'navbar' %>
 
 <div class="container">
-  <h1>Editer mon profil</h1>
+  <h1>Update your profile</h1>
 
   <%= form_with model: @user, local: true do |form| %>
     <div class="form-group">
-      <%= form.label :first_name, "Prénom" %>
+      <%= form.label :first_name, "First name" %>
       <%= form.text_field :first_name, class: "form-control" %>
     </div>
 
     <div class="form-group">
-      <%= form.label :last_name, "Nom" %>
+      <%= form.label :last_name, "Last name" %>
       <%= form.text_field :last_name, class: "form-control" %>
     </div>
 
     <div class="form-group">
-      <%= form.label :birth_date, "Date de naissance" %>
+      <%= form.label :birth_date, "Birth date" %>
       <%= form.date_field :birth_date, class: "form-control" %>
     </div>
 
@@ -25,22 +25,22 @@
     </div>
 
     <div class="form-group">
-      <%= form.label :nationality, "Nationalité" %>
+      <%= form.label :nationality, "Nationality" %>
       <%= form.text_field :nationality, class: "form-control" %>
     </div>
 
     <div class="form-group">
       <%= form.label :gender, "Genre" %>
-      <%= form.select :gender, ['Masculin', 'Féminin', 'Non-binaire', 'Autre'], class: "form-control" %>
+      <%= form.select :gender, ['Male', 'Female'], class: "form-control" %>
     </div>
 
     <div class="form-group">
-      <%= form.label :location, "Lieu" %>
+      <%= form.label :location, "Location" %>
       <%= form.text_field :location, class: "form-control" %>
     </div>
 
     <div class="form-group">
-      <%= form.label :number_of_children, "Nombre d'enfants" %>
+      <%= form.label :number_of_children, "Number of children" %>
       <%= form.number_field :number_of_children, class: "form-control" %>
     </div>
 
@@ -50,13 +50,13 @@
     </div>
 
     <div class="form-group">
-      <%= form.label :photo, "Photo de profil" %>
+      <%= form.label :photo, "Profile picture" %>
       <%= form.file_field :photo, class: "form-control" %>
     </div>
 
-    <%= form.submit "Mettre à jour", class: "btn btn-primary" %>
+    <%= form.submit "Update", class: "btn btn-primary" %>
   <% end %>
 
-  <%= link_to "Annuler", user_path(@user), class: "btn btn-secondary" %>
+  <%= link_to "Cancel", user_path(@user), class: "btn btn-secondary" %>
 
 </div>
