Edite profile pic via modal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "components/card";
 @import "pages/index";
 @import "pages/home";
+@import "pages/edit";
 @import "components/loginpage";
 @import "components/aupair_show";
 
